Correct few margin to avoid Navbar getting overlapped on mobile

--- a/src/components/FAQ/FAQCard.css
+++ b/src/components/FAQ/FAQCard.css
@@ -102,6 +102,7 @@
 
 @media screen and (max-width: 768px) {
   .faq-container {
+    margin-top: 60px;
     border-radius: 0;
     padding: 0;
   }
